--- a/ClinicApp/src/app/components/register/register.component.scss
+++ b/ClinicApp/src/app/components/register/register.component.scss
@@ -17,112 +17,40 @@ body{
   border-radius: 5px;
 }
 
-.container .title{
-  font-size: 30px;
-  font-weight: 500;
-  text-align: center;
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
-
-.container form .user-details{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 20px 0 12px 0;
-}
-
-form .user-details .input-box{
-  margin-bottom: 15px;
-  width: calc(100% / 2 - 20px);
-}
-
-.user-details .input-box input .details{
-  display: block;
-  font-weight: 500;
-  margin-bottom: 5px;
-}
-
-.user-details .input-box input{
-  height: 45px;
-  width: 100%;
-  outline: none;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  padding-left: 15px;
-  font-size: 16px;
-  border-bottom-width: 2px;
-  transition: all 0.3s ease;
-}
-
-.user-details .input-box input:focus,
-.user-details .input-box input:valid{
-  border-color: salmon;
-}
-
-form .gender-details .gender-title{
-  font-size: 20px;
-  font-weight: 500;
-}
-
-form .gender-details .category{
-  display: flex;
-  width: 90%;
-  margin: 14px 0;
-  justify-content: space-between;
-}
-
-.gender-details .category label{
-  display: flex;
-  align-items: center;
-}
-
-.gender-details .category .dot{
-  height: 18px;
-  width: 18px;
-  background: grey;
-  border-radius: 50%;
-  margin-right: 10px;
-  border: 5px solid transparent;
-  transition: all 0.3s ease;
-}
-
-#dot-1:checked ~ .category label .one,
-#dot-2:checked ~ .category label .two,
-#dot-3:checked ~ .category label .three{
-  border-color: salmon;
-  background: seagreen;
-}
-
-form input[type="radio"]{
-  display: none;
-}
-
 .center{
-  padding-top: 25px;
-  justify-content: center;
+  padding: auto;
   text-align: center;
+}
 
+.header{
+  padding-bottom: 40px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 35px;
+}
+
+.wrapper{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1.5em;
+  align-items: stretch;
+}
+
+.wrapper > div{
+  padding: 1em;
 }
 
 button{
-
-  padding: 14px 30px;
-  font-size: 20px;
+  padding: 10px 40px;
+  font-size: 25px;
   font-weight: 500;
 }
 
-@media (max-width:584px){
-  .container{
-    max-width: 100%;
-  }
+input{
+  font-size: 20px;
+  font-weight: 400;
+}
 
-  form .user-details .input-box{
-    margin-bottom: 15px;
-    width: 100%;
-  }
-
-  form .gender-details .category{
-    width: 100%;
-  }
+.placeholder-color{
+  font-size: 20px;
 }
