--- a/ClinicApp/src/app/components/navbar/navbar.component.html
+++ b/ClinicApp/src/app/components/navbar/navbar.component.html
@@ -1,14 +1,21 @@
 <mat-toolbar color='custom' class="toolbar">
 <div class="title">
-  <i class="fas fa-clinic-medical" routerLink="/"> Clinic</i>
+  <i class="fas fa-clinic-medical" routerLink="Home"> Clinic</i>
 </div>
 
-<div>
+<div class="const">
   <a mat-button>About Us</a>
   <a mat-button>Offer</a>
-  <a mat-button routerLink="SignUp">Sign Up</a>
-  <a mat-button>Sign In</a>
 </div>
 
+<div class="right" *ngIf="(accountService.currentUser$ | async) === null">
+  <a mat-button routerLink="SignUp">Sign Up</a>
+  <a mat-button routerLink="SignIn">Sign In</a>
+</div>
+
+<div class="right" *ngIf="(accountService.currentUser$ | async) as user">
+  <a mat-button (click)="openMyProfileDialog()">Welcome {{user.email}}</a>
+  <a mat-button (click)="logout()">Log Out</a>
+</div>
 
 </mat-toolbar>
