--- a/ClinicApp/src/app/app.component.scss
+++ b/ClinicApp/src/app/app.component.scss
@@ -1,8 +1,8 @@
 html,body {
   margin:0;
-  background-image: radial-gradient( circle farthest-corner at 5.6% 54.5%, rgb(67, 99, 109) 0%, rgba(159,188,198,1) 83.6% );
-  background: linear-gradient(135deg, grey,pink);
+  background-color: white;
 }
+
 
 .remove-margins {
   width: 100%;
